# brickBase

./: .gitignore  .hlint.yaml  LICENSE  Makefile  README.md  brickBedrock-exe.sh  brickBedrock.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
app/: Main.hs
src/BrickBedrock/: Core.hs  Defaults.hs  Formatting.hs  Model.hs  Utils.hs
src/BrickBedrock/Controls/: ListGrid.hs  ReadOnlyEdit.hs
src/BrickBedrock/Demo/: Demo.hs
test/: DemoTests.hs  Tests.hs
