cabal-version:       3.0
name:                brickBedrock
version:             0.1.7.5
synopsis:            Simple starting framework for Brick applications
description:         Simple starting framework for Brick applications
synopsis:            Brick application base utility library
homepage:            https://github.com/andrevdm/brickBedrock#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Andre Van Der Merwe
maintainer:          info@andrevdm.co.za
copyright:           2021 Andre Van Der Merwe
category:            Web
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC==9.0.1, GHC==8.7.10, GHC==8.8.4


source-repository head
  type:                   git
  location:               git://github.com/andrevdm/postgresql-migration

common common-options
  build-depends:
    base >=4.9 && <5
  default-language:
    Haskell2010


common common-ghc-options-ide
  ghc-options: -fwrite-ide-info -hiedir=.hie

common common-ghc-options
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat -Wimplicit-prelude -Wredundant-constraints -Wnoncanonical-monad-instances -Widentities -fhide-source-paths -Wpartial-fields -fhide-source-paths -freverse-errors


library
  import:                 common-options
  import:                 common-ghc-options

  if impl(ghc >= 8.8.1)
    import:                common-ghc-options-ide

  hs-source-dirs:      src
  exposed-modules:     BrickBedrock.Core
                     , BrickBedrock.Defaults
                     , BrickBedrock.Model
                     , BrickBedrock.Utils
                     , BrickBedrock.Formatting
                     , BrickBedrock.Demo.Demo
                     , BrickBedrock.Controls.ReadOnlyEdit
                     , BrickBedrock.Controls.ListGrid
  other-modules:       Paths_brickBedrock
  autogen-modules:     Paths_brickBedrock
  build-depends:       protolude >= 0.2.4 && < 0.3.1
                     , aeson >= 1.5.6.0 && < 1.15.6.0
                     , brick >= 0.62 && < 0.63
                     , bytestring >= 0.10.10 && < 0.10.13.0
                     , containers >= 0.6.2.1 && < 0.6.6.0
                     , lens >= 4.19.2 && < 5.0
                     , safe-exceptions >= 0.1.7.2 && < 0.1.8.0
                     , scientific >= 0.3.7.0 && < 0.3.8.0
                     , strip-ansi-escape >= 0.1.0.0 && < 0.1.1.0
                     , stm >= 2.5.0.0 && < 2.6.0.0
                     , stm-chans >= 3.0.0.0 && < 3.1.0.0
                     , text >= 1.2.4.0 && < 1.2.5.0
                     , text-zipper >= 0.11 && < 0.12
                     , time >= 1.9.3 && < 1.10.0
                     , unordered-containers >= 0.2.14.0 && < 0.2.15.0
                     , uuid >= 1.3.15 && < 1.3.16
                     , vector >= 0.12.3.1 && < 0.12.4.0
                     , vty >= 5.33 && < 5.44
                     , typed-process
  default-language:    Haskell2010

executable brickBedrock-exe
  import:                 common-options
  import:                 common-ghc-options

  if impl(ghc >= 8.8.1)
    import:                common-ghc-options-ide

  ghc-options:         -threaded
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_brickBedrock
  autogen-modules:     Paths_brickBedrock
  build-depends:       base
                     , brickBedrock
                     , protolude
                     , brick >= 0.62 && < 0.63
                     , containers >= 0.6.2.1 && < 0.6.6.0
                     , lens >= 4.19.2 && < 5.0
                     , safe-exceptions >= 0.1.7.2 && < 0.1.8.0
                     , stm >= 2.5.0.0 && < 2.6.0.0
                     , stm-chans >= 3.0.0.0 && < 3.1.0.0
                     , text >= 1.2.4.0 && < 1.2.5.0
                     , time >= 1.9.3 && < 1.10.0
                     , unordered-containers >= 0.2.14.0 && < 0.2.15.0
                     , uuid >= 1.3.15 && < 1.3.16
                     , vector >= 0.12.3.1 && < 0.12.4.0
                     , vty >= 5.33 && < 5.44

source-repository head
  type:     git
  location: https://github.com/andrevdm/brickBedrock
