cabal-version:       3.0
name:                brickBedrock
version:             0.1.8.0
description:         Simple starting framework for Brick applications
synopsis:            Brick application base utility library
homepage:            https://github.com/andrevdm/brickBedrock#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Andre Van Der Merwe
maintainer:          info@andrevdm.co.za
copyright:           2021 Andre Van Der Merwe
category:            Web
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC==9.0.1, GHC==8.7.10, GHC==8.8.4


source-repository head
  type:                   git
  location:               git://github.com/andrevdm/postgresql-migration

common common-options
  build-depends:
    base >=4.9 && <5
  default-language:
    Haskell2010


common common-ghc-options-ide
  ghc-options: -fwrite-ide-info -hiedir=.hie

common common-ghc-options
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat -Wimplicit-prelude -Wredundant-constraints -Wnoncanonical-monad-instances -Widentities -fhide-source-paths -Wpartial-fields -fhide-source-paths -freverse-errors


library
  import:                 common-options
  import:                 common-ghc-options

  if impl(ghc >= 8.8.1)
    import:                common-ghc-options-ide

  hs-source-dirs:      src
  exposed-modules:     BrickBedrock.Core
                     , BrickBedrock.Defaults
                     , BrickBedrock.Model
                     , BrickBedrock.Utils
                     , BrickBedrock.Formatting
                     , BrickBedrock.Demo.Demo
                     , BrickBedrock.Controls.ReadOnlyEdit
                     , BrickBedrock.Controls.ListGrid
  other-modules:       Paths_brickBedrock
  autogen-modules:     Paths_brickBedrock
  build-depends:       protolude
                     , aeson
                     , brick
                     , bytestring
                     , containers
                     , lens
                     , safe-exceptions
                     , scientific
                     , strip-ansi-escape
                     , stm
                     , stm-chans
                     , text
                     , text-zipper
                     , time
                     , unordered-containers
                     , uuid
                     , vector
                     , vty
  default-language:    Haskell2010

executable brickBedrock-exe
  import:                 common-options
  import:                 common-ghc-options

  if impl(ghc >= 8.8.1)
    import:                common-ghc-options-ide

  ghc-options:         -threaded
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_brickBedrock
  autogen-modules:     Paths_brickBedrock
  build-depends:       base
                     , brickBedrock
                     , protolude
                     , brick
                     , containers
                     , lens
                     , safe-exceptions
                     , stm
                     , stm-chans
                     , text
                     , time
                     , unordered-containers
                     , uuid
                     , vector
                     , vty

source-repository head
  type:     git
  location: https://github.com/andrevdm/brickBedrock
